BoostTest: Add a test for BoostTestFinder

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -65,6 +65,7 @@ set(mull_unittests_sources
 
   JunkDetection/CompilationDatabaseTests.cpp
   MutationFilters/MutationFilterTests.cpp
+  BoostTest/BoostTestFinderTest.cpp
   )
 
 get_filename_component(factory_include_dir ${FACTORY_HEADER} DIRECTORY)
