--- a/infrastructure/helpers/variables.yaml
+++ b/infrastructure/helpers/variables.yaml
@@ -28,6 +28,9 @@ llvm_mapping:
       path: clang+llvm-6.0.0-x86_64-linux-gnu-debian8
 
   ubuntu:
+    11.0.0:
+      url: https://github.com/llvm/llvm-project/releases/download/llvmorg-11.0.0/clang+llvm-11.0.0-x86_64-linux-gnu-ubuntu-20.04.tar.xz
+      path: clang+llvm-11.0.0-x86_64-linux-gnu-ubuntu-20.04
     10.0.0:
       url: https://github.com/llvm/llvm-project/releases/download/llvmorg-10.0.0/clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz
       path: clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04
