Pick up parts of ENV var migration

--- a/infrastructure/helpers/variables.yaml
+++ b/infrastructure/helpers/variables.yaml
@@ -6,6 +6,9 @@ SDKROOT: /
 
 llvm_mapping:
   macos:
+    11.0.0:
+      url: https://github.com/llvm/llvm-project/releases/download/llvmorg-11.0.0/clang+llvm-11.0.0-x86_64-apple-darwin.tar.xz
+      path: clang+llvm-11.0.0-x86_64-apple-darwin
     10.0.0:
       url: https://github.com/llvm/llvm-project/releases/download/llvmorg-10.0.0/clang+llvm-10.0.0-x86_64-apple-darwin.tar.xz
       path: clang+llvm-10.0.0-x86_64-apple-darwin
