--- a/tests-lit/lit.cfg
+++ b/tests-lit/lit.cfg
@@ -36,6 +36,8 @@ config.test_format = lit.formats.ShTest("0")
 # LLVM LIT: Is it possible to pass user defined parameter into a test script?
 # https://stackoverflow.com/a/39861848/598057
 current_dir = os.environ.get('CURRENT_DIR', '')
+clang_cc = os.environ.get('clang_cc', '')
+clang_cxx = os.environ.get('clang_cxx', '')
 clang_exec = os.environ.get('CLANG_EXEC', '')
 mull_exec = os.environ.get('MULL_EXEC', '')
 filecheck_exec = os.environ.get('FILECHECK_EXEC', '')
@@ -52,13 +54,15 @@ test_cxx_flags = unescape_string(test_cxx_flags)
 portable_mull_exec = get_mull_portable_exec(llvm_path)
 
 config.substitutions.append(('%CURRENT_DIR', current_dir))
+config.substitutions.append(('%clang_cc', clang_cc))
+config.substitutions.append(('%clang_cxx', clang_cxx))
 config.substitutions.append(('%CLANG_EXEC', clang_exec))
 config.substitutions.append(('%MULL_EXEC', portable_mull_exec))
 config.substitutions.append(('%FILECHECK_EXEC', filecheck_exec))
 config.substitutions.append(('%LLVM_PATH', llvm_path))
 config.substitutions.append(('%TEST_CXX_FLAGS', test_cxx_flags))
 
-config.suffixes = ['.cpp']
+config.suffixes = ['.cpp', '.c']
 
 if int(llvm_major_version) >= 8:
   config.available_features.add('LLVM_8_OR_HIGHER')
