Drop SimpleTest framework

--- a/tests/fixtures/mutators/negate_condition/CMakeLists.txt
+++ b/tests/fixtures/mutators/negate_condition/CMakeLists.txt
@@ -1,6 +1,7 @@
 set (SOURCES
   ${CMAKE_CURRENT_LIST_DIR}/tester.c
   ${CMAKE_CURRENT_LIST_DIR}/testee.c
+  ${CMAKE_CURRENT_LIST_DIR}/main.c
   ${CMAKE_CURRENT_LIST_DIR}/junk.cpp
 )
 
@@ -8,7 +9,7 @@ foreach(source ${SOURCES})
   compile_fixture(
     INPUT ${source}
     OUTPUT_EXTENSION bc
-    FLAGS -g -c -emit-llvm
+    FLAGS -g -c -emit-llvm -I${CMAKE_CURRENT_LIST_DIR}
   )
 endforeach()
 
