--- a/tests/fixtures/mutators/and_or/and_or_replacement_compound/CMakeLists.txt
+++ b/tests/fixtures/mutators/and_or/and_or_replacement_compound/CMakeLists.txt
@@ -3,4 +3,9 @@ compile_fixture(
   OUTPUT_EXTENSION bc
   FLAGS -g -c -emit-llvm
 )
+compile_fixture(
+  INPUT ${CMAKE_CURRENT_LIST_DIR}/main.c
+  OUTPUT_EXTENSION bc
+  FLAGS -g -c -emit-llvm -I${CMAKE_CURRENT_LIST_DIR}
+)
 
