--- a/tests/fixtures/mutators/and_or/and_to_or_replacement_cpp/CMakeLists.txt
+++ b/tests/fixtures/mutators/and_or/and_to_or_replacement_cpp/CMakeLists.txt
@@ -3,6 +3,11 @@ compile_fixture(
   OUTPUT_EXTENSION bc
   FLAGS -g -c -emit-llvm
 )
+compile_fixture(
+  INPUT ${CMAKE_CURRENT_LIST_DIR}/main.cpp
+  OUTPUT_EXTENSION bc
+  FLAGS -g -c -emit-llvm -I${CMAKE_CURRENT_LIST_DIR}
+)
 
 compile_fixture(
   INPUT ${CMAKE_CURRENT_LIST_DIR}/junk.cpp
