--- a/tests/fixtures/mutators/replace_assignment/CMakeLists.txt
+++ b/tests/fixtures/mutators/replace_assignment/CMakeLists.txt
@@ -3,6 +3,11 @@ compile_fixture(
   OUTPUT_EXTENSION bc
   FLAGS -g -c -emit-llvm
 )
+compile_fixture(
+  INPUT ${CMAKE_CURRENT_LIST_DIR}/main.c
+  OUTPUT_EXTENSION bc
+  FLAGS -g -c -emit-llvm
+)
 
 compile_fixture(
   INPUT ${CMAKE_CURRENT_LIST_DIR}/junk.cpp
