Loading bitcode: prevent Mull from crashing due to bitcode version mismatch
Closes #708
Closes #799

--- a/tests-lit/lit.cfg
+++ b/tests-lit/lit.cfg
@@ -64,7 +64,14 @@ config.substitutions.append(('%FILECHECK_EXEC', filecheck_exec))
 config.substitutions.append(('%LLVM_PATH', llvm_path))
 config.substitutions.append(('%TEST_CXX_FLAGS', test_cxx_flags))
 
-config.suffixes = ['.cpp', '.c']
+config.suffixes = ['.cpp', '.c', '.itest']
 
 if int(llvm_major_version) >= 8:
   config.available_features.add('LLVM_8_OR_HIGHER')
+
+if int(llvm_major_version) <= 10:
+  config.available_features.add('LLVM_10_OR_LOWER')
+
+if platform.system() == 'Darwin':
+  config.available_features.add('MACOS')
+
