--- a/tests/fixtures/mutators/remove_void_function/CMakeLists.txt
+++ b/tests/fixtures/mutators/remove_void_function/CMakeLists.txt
@@ -1,15 +1,5 @@
-set (SOURCES
-  ${CMAKE_CURRENT_LIST_DIR}/tester.c
-  ${CMAKE_CURRENT_LIST_DIR}/testee.c
-  ${CMAKE_CURRENT_LIST_DIR}/main.c
-  ${CMAKE_CURRENT_LIST_DIR}/junk.cpp
+compile_fixture(
+  INPUT ${CMAKE_CURRENT_LIST_DIR}/junk.cpp
+  OUTPUT_EXTENSION bc
+  FLAGS -g -c -emit-llvm -I${CMAKE_CURRENT_LIST_DIR}
 )
-
-foreach(source ${SOURCES})
-  compile_fixture(
-    INPUT ${source}
-    OUTPUT_EXTENSION bc
-    FLAGS -g -c -emit-llvm -I${CMAKE_CURRENT_LIST_DIR}
-  )
-endforeach()
-
