Upstreaming JIT removal
These changes are needed to drop JIT, but they do not break existing master

--- a/tests-lit/lit.cfg
+++ b/tests-lit/lit.cfg
@@ -38,6 +38,7 @@ config.test_format = lit.formats.ShTest("0")
 current_dir = os.environ.get('CURRENT_DIR', '')
 clang_cc = os.environ.get('clang_cc', '')
 clang_cxx = os.environ.get('clang_cxx', '')
+llvm_profdata = os.environ.get('llvm_profdata', '')
 clang_exec = os.environ.get('CLANG_EXEC', '')
 mull_exec = os.environ.get('MULL_EXEC', '')
 filecheck_exec = os.environ.get('FILECHECK_EXEC', '')
@@ -56,6 +57,7 @@ portable_mull_exec = get_mull_portable_exec(llvm_path)
 config.substitutions.append(('%CURRENT_DIR', current_dir))
 config.substitutions.append(('%clang_cc', clang_cc))
 config.substitutions.append(('%clang_cxx', clang_cxx))
+config.substitutions.append(('%llvm_profdata', llvm_profdata))
 config.substitutions.append(('%CLANG_EXEC', clang_exec))
 config.substitutions.append(('%MULL_EXEC', portable_mull_exec))
 config.substitutions.append(('%FILECHECK_EXEC', filecheck_exec))
