--- a/.github/workflows/ci-ubuntu-18.yml
+++ b/.github/workflows/ci-ubuntu-18.yml
@@ -84,12 +84,15 @@ jobs:
             -e host=localhost \
             -e mull_version=${{ steps.settings.outputs.version }}${{ steps.settings.outputs.suffix }} \
             --verbose
-      - name: Publish package
+      - name: Delete package if there is an existing one
         if: matrix.LLVM_VERSION == env.LLVM_RELEASE && env.CHECK_SECRETS != null
         run: |
           curl --silent --show-error --location --request DELETE \
             --user "alexdenisov:${{ secrets.BINTRAY_API_KEY }}" \
             "https://api.bintray.com/packages/mull-project/${{ env.BINTRAY_REPO }}/${{ steps.settings.outputs.package }}/versions/${{ steps.settings.outputs.version }}${{ steps.settings.outputs.suffix }}"
+      - name: Publish package
+        if: matrix.LLVM_VERSION == env.LLVM_RELEASE && env.CHECK_SECRETS != null
+        run: |
           curl --silent --show-error --fail --location --request PUT \
             --upload-file infrastructure/packages/`cat infrastructure/PACKAGE_FILE_NAME`.deb \
             --user "alexdenisov:${{ secrets.BINTRAY_API_KEY }}" \
