--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -54,7 +54,7 @@ set(mull_unittests_sources
 
 get_filename_component(factory_include_dir ${FACTORY_HEADER} DIRECTORY)
 
-add_executable(mull-tests ${mull_unittests_sources})
+add_executable(mull-tests EXCLUDE_FROM_ALL ${mull_unittests_sources})
 gtest_discover_tests(mull-tests)
 target_link_libraries(mull-tests
   mull
