Migrate from Bintray to Cloudsmith

--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -1,9 +1,8 @@
 name: CI macOS
 
 env:
-  BINTRAY_REPO: "macos"
   LLVM_RELEASE: "11.0"
-  CHECK_SECRETS: ${{ secrets.BINTRAY_API_KEY }}
+  CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
 
 on:
   pull_request:
@@ -33,19 +32,16 @@ jobs:
           case $GITHUB_EVENT_NAME in
             "pull_request")
               echo ::set-output name=suffix::-pr`grep -Eo "\"number\": [0-9]+" $GITHUB_EVENT_PATH | awk ' { print $2; exit } '`
-              echo ::set-output name=package::mull-nightly
               echo ::set-output name=channel::nightly
             ;;
             "push")
               case $GITHUB_REF in
                 "refs/heads/"*)
                   echo ::set-output name=suffix::-trunk`git rev-list HEAD --count`
-                  echo ::set-output name=package::mull-nightly
                   echo ::set-output name=channel::nightly
                 ;;
                 "refs/tags/"*)
                   echo ::set-output name=suffix::""
-                  echo ::set-output name=package::mull
                   echo ::set-output name=channel::stable
                   if [ `echo $GITHUB_REF | awk -F/ ' { print $3 } '` != `grep -Eo "MULL_VERSION [0-9.]+" CMakeLists.txt | awk ' { print $2 } '` ];
                   then
@@ -74,12 +70,7 @@ jobs:
             -e mull_version=${{ steps.settings.outputs.version }}${{ steps.settings.outputs.suffix }} \
             --verbose
       - name: Publish package
-        if: matrix.LLVM_VERSION == env.LLVM_RELEASE && env.CHECK_SECRETS != null
+        if: matrix.LLVM_VERSION == env.LLVM_RELEASE && env.CLOUDSMITH_API_KEY != null
         run: |
-          curl --silent --show-error --location --request DELETE \
-            --user "alexdenisov:${{ secrets.BINTRAY_API_KEY }}" \
-            "https://api.bintray.com/packages/mull-project/${{ env.BINTRAY_REPO }}/${{ steps.settings.outputs.package }}/versions/${{ steps.settings.outputs.version }}${{ steps.settings.outputs.suffix }}"
-          curl --silent --show-error --fail --location --request PUT \
-            --upload-file infrastructure/packages/`cat infrastructure/PACKAGE_FILE_NAME`.zip \
-            --user "alexdenisov:${{ secrets.BINTRAY_API_KEY }}" \
-            "https://api.bintray.com/content/mull-project/${{ env.BINTRAY_REPO }}/${{ steps.settings.outputs.package }}/${{ steps.settings.outputs.version }}${{ steps.settings.outputs.suffix }}/`cat infrastructure/PACKAGE_FILE_NAME`.zip;publish=1"
+          cloudsmith push raw mull-project/mull-${{ steps.settings.outputs.channel }} infrastructure/packages/`cat infrastructure/PACKAGE_FILE_NAME`.zip
+
