--- a/tests-lit/lit.cfg
+++ b/tests-lit/lit.cfg
@@ -33,6 +33,7 @@ clang_cxx = os.environ.get('clang_cxx', '')
 llvm_profdata = os.environ.get('llvm_profdata', '')
 clang_exec = os.environ.get('CLANG_EXEC', '')
 mull_exec = os.environ.get('MULL_EXEC', '')
+mull_runner = os.environ.get('mull_runner', '')
 filecheck_exec = os.environ.get('FILECHECK_EXEC', '')
 llvm_path = os.environ.get('PATH_TO_LLVM', '')
 llvm_major_version = os.environ.get('LLVM_VERSION_MAJOR', '')
@@ -52,6 +53,7 @@ config.substitutions.append(('%clang_cxx', clang_cxx))
 config.substitutions.append(('%llvm_profdata', llvm_profdata))
 config.substitutions.append(('%CLANG_EXEC', clang_exec))
 config.substitutions.append(('%MULL_EXEC', portable_mull_exec))
+config.substitutions.append(('%mull_runner', mull_runner))
 config.substitutions.append(('%FILECHECK_EXEC', filecheck_exec))
 config.substitutions.append(('%LLVM_PATH', llvm_path))
 config.substitutions.append(('%TEST_CXX_FLAGS', test_cxx_flags))
