--- a/tests-lit/lit.cfg
+++ b/tests-lit/lit.cfg
@@ -38,6 +38,7 @@ filecheck_exec = os.environ.get('FILECHECK_EXEC', '')
 llvm_path = os.environ.get('PATH_TO_LLVM', '')
 llvm_major_version = os.environ.get('LLVM_VERSION_MAJOR', '')
 test_cxx_flags = os.environ.get('TEST_CXX_FLAGS', '')
+python3 = os.environ.get('python3', '')
 
 assert llvm_path
 assert llvm_major_version
@@ -53,10 +54,12 @@ config.substitutions.append(('%clang_cxx', clang_cxx))
 config.substitutions.append(('%llvm_profdata', llvm_profdata))
 config.substitutions.append(('%CLANG_EXEC', clang_exec))
 config.substitutions.append(('%MULL_EXEC', portable_mull_exec))
+config.substitutions.append(('%mull_cxx', portable_mull_exec))
 config.substitutions.append(('%mull_runner', mull_runner))
 config.substitutions.append(('%FILECHECK_EXEC', filecheck_exec))
 config.substitutions.append(('%LLVM_PATH', llvm_path))
 config.substitutions.append(('%TEST_CXX_FLAGS', test_cxx_flags))
+config.substitutions.append(('%python3', python3))
 
 config.suffixes = ['.cpp', '.c', '.itest']
 
