cxx-frontend: initial commit and first integration tests

--- a/tests-lit/CMakeLists.txt
+++ b/tests-lit/CMakeLists.txt
@@ -32,6 +32,7 @@ set(LIT_COMMAND
   CURRENT_DIR=${CMAKE_CURRENT_SOURCE_DIR}
   MULL_EXEC=$<TARGET_FILE:mull-cxx>
   mull_runner=$<TARGET_FILE:mull-runner>
+  mull_frontend_cxx=$<TARGET_FILE:mull-cxx-frontend>
   CLANG_EXEC=${CLANG_EXEC}
   clang_cc=${clang_cc}
   clang_cxx=${clang_cxx}
@@ -41,6 +42,7 @@ set(LIT_COMMAND
   TEST_CXX_FLAGS="${TEST_CXX_FLAGS}"
   ${LIT_EXEC}
   -vv
+  --filter cxx-frontend
   ${CMAKE_CURRENT_SOURCE_DIR}/tests
   )
 
