--- a/tests-lit/CMakeLists.txt
+++ b/tests-lit/CMakeLists.txt
@@ -43,7 +43,7 @@ set(LIT_COMMAND
   ${LIT_EXEC}
   -vv
   --filter cxx-front
-   --filter 05-var
+  # --filter 06-parent-is-c
   ${CMAKE_CURRENT_SOURCE_DIR}/tests
   )
 
