--- a/tests-lit/lit.cfg
+++ b/tests-lit/lit.cfg
@@ -35,6 +35,8 @@ clang_exec = os.environ.get('CLANG_EXEC', '')
 mull_exec = os.environ.get('MULL_EXEC', '')
 mull_runner = os.environ.get('mull_runner', '')
 mull_frontend_cxx = os.environ.get('mull_frontend_cxx', '')
+mull_rt = os.environ.get('mull_rt', '')
+mull_path_to_rt = os.environ.get('mull_path_to_rt', '')
 filecheck_exec = os.environ.get('FILECHECK_EXEC', '')
 llvm_path = os.environ.get('PATH_TO_LLVM', '')
 llvm_major_version = os.environ.get('LLVM_VERSION_MAJOR', '')
@@ -58,6 +60,8 @@ config.substitutions.append(('%MULL_EXEC', portable_mull_exec))
 config.substitutions.append(('%mull_cxx', portable_mull_exec))
 config.substitutions.append(('%mull_runner', mull_runner))
 config.substitutions.append(('%mull_frontend_cxx', mull_frontend_cxx))
+config.substitutions.append(('%mull_rt', mull_rt))
+config.substitutions.append(('%mull_path_to_rt', mull_path_to_rt))
 config.substitutions.append(('%FILECHECK_EXEC', filecheck_exec))
 config.substitutions.append(('%LLVM_PATH', llvm_path))
 config.substitutions.append(('%TEST_CXX_FLAGS', test_cxx_flags))
