cxx-frontend: remove dependency on TreeTransform + ASTMutator.cpp content

--- a/tools/mull-cxx-frontend/CMakeLists.txt
+++ b/tools/mull-cxx-frontend/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(mull-cxx-frontend
   src/ASTInstrumentation.cpp
   src/ASTMutationsSearchVisitor.cpp
   src/ASTMutation.cpp
+  src/ASTMutator.cpp
   src/ASTNodeFactory.cpp
   src/MullClangPlugin.cpp
 
