--- a/tests-lit/CMakeLists.txt
+++ b/tests-lit/CMakeLists.txt
@@ -42,7 +42,7 @@ set(LIT_COMMAND
   TEST_CXX_FLAGS="${TEST_CXX_FLAGS}"
   ${LIT_EXEC}
   -vv
-  # --filter cxx-front
+  --filter cxx-front
   # --filter sandbox
   ${CMAKE_CURRENT_SOURCE_DIR}/tests
   )
