WIP: Does not work with coverage

--- a/tests-lit/CMakeLists.txt
+++ b/tests-lit/CMakeLists.txt
@@ -42,6 +42,8 @@ set(LIT_COMMAND
   TEST_CXX_FLAGS="${TEST_CXX_FLAGS}"
   ${LIT_EXEC}
   -vv
+   --filter 00-sandbox
+#  --filter remove_void
   ${CMAKE_CURRENT_SOURCE_DIR}/tests
   )
 
