--- a/tools/mull-cxx-frontend/CMakeLists.txt
+++ b/tools/mull-cxx-frontend/CMakeLists.txt
@@ -16,7 +16,6 @@ add_library(mull-cxx-frontend
 target_link_libraries(mull-cxx-frontend ${MULL_CXX_LLVM_LIBRARIES})
 
 set_target_properties(mull-cxx-frontend PROPERTIES
-  LINK_FLAGS ${MULL_LINK_FLAGS}
   COMPILE_FLAGS ${MULL_CXX_FLAGS}
 )
 target_include_directories(mull-cxx-frontend PRIVATE
@@ -26,9 +25,9 @@ target_include_directories(mull-cxx-frontend SYSTEM PRIVATE
   ${THIRD_PARTY_INCLUDE_DIRS}
 )
 
-INSTALL(TARGETS mull-cxx-frontend
-  RUNTIME DESTINATION lib
-)
+#INSTALL(TARGETS mull-cxx-frontend
+#  RUNTIME DESTINATION lib
+#)
 
 if (APPLE)
   target_link_libraries(mull-cxx-frontend PRIVATE
