--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,21 @@ if (${BUILD_AGAINST_PRECOMPILED_LLVM})
   find_package(LLVM REQUIRED CONFIG PATHS ${search_paths} NO_DEFAULT_PATH)
   find_package(Clang REQUIRED CONFIG PATHS ${search_paths} NO_DEFAULT_PATH)
 
+  if (APPLE)
+    if (LLVM_VERSION_MAJOR EQUAL 12)
+      # Precompiled LLVM 12 for macOS contains a hardcoded dependency on a very
+      # specific version of libcurses:
+      #
+      #   set_target_properties(LLVMSupport PROPERTIES
+      #     INTERFACE_LINK_LIBRARIES "m;ZLIB::ZLIB;/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.1.sdk/usr/lib/libcurses.tbd;LLVMDemangle"
+      #   )
+      #
+      # So we are monkey-patching it here
+      set_target_properties(LLVMSupport PROPERTIES
+        INTERFACE_LINK_LIBRARIES "z;curses;m;LLVMDemangle")
+    endif()
+  endif()
+
   if (TARGET clang)
     get_target_property(MULL_CC clang LOCATION)
   else()
