--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -1,7 +1,7 @@
 name: CI macOS
 
 env:
-  LLVM_RELEASE: "11.0"
+  LLVM_RELEASE: "12.0"
   CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
 
 on:
@@ -18,7 +18,7 @@ jobs:
     runs-on: macOS-latest
     strategy:
       matrix:
-        LLVM_VERSION: ["6.0", "7.0", "8.0", "9.0", "10.0", "11.0"]
+        LLVM_VERSION: ["6.0", "7.0", "8.0", "9.0", "10.0", "11.0", "12.0"]
 
     steps:
       - uses: actions/checkout@v1
