Change main branch name

--- a/infrastructure/Vagrantfile
+++ b/infrastructure/Vagrantfile
@@ -24,7 +24,7 @@ Vagrant.configure(2) do |config|
       ansible.playbook = "debian-playbook.yaml"
       ansible.extra_vars = {
         llvm_version: ENV['LLVM_VERSION'] || '6.0.0',
-        gitref: ENV['GITREF'] || 'master',
+        gitref: ENV['GITREF'] || 'main',
       }
     end
   end
@@ -42,7 +42,7 @@ Vagrant.configure(2) do |config|
       ansible.playbook = "ubuntu-playbook.yaml"
       ansible.extra_vars = {
         llvm_version: ENV['LLVM_VERSION'] || '6.0.0',
-        gitref: ENV['GITREF'] || 'master',
+        gitref: ENV['GITREF'] || 'main',
       }
     end
   end
@@ -60,7 +60,7 @@ Vagrant.configure(2) do |config|
       ansible.playbook = "ubuntu-playbook.yaml"
       ansible.extra_vars = {
         llvm_version: ENV['LLVM_VERSION'] || '6.0.0',
-        gitref: ENV['GITREF'] || 'master',
+        gitref: ENV['GITREF'] || 'main',
       }
     end
   end
@@ -80,7 +80,7 @@ Vagrant.configure(2) do |config|
       ansible.playbook = "fedora-playbook.yaml"
       ansible.extra_vars = {
         llvm_version: ENV['LLVM_VERSION'] || '6.0.0',
-        gitref: ENV['GITREF'] || 'master',
+        gitref: ENV['GITREF'] || 'main',
       }
     end
   end
@@ -104,7 +104,7 @@ Vagrant.configure(2) do |config|
         llvm_version: ENV['LLVM_VERSION'] || '8.0.0',
         ansible_python_interpreter: '/usr/local/bin/python',
         make_program: 'gmake',
-        gitref: ENV['GITREF'] || 'master',
+        gitref: ENV['GITREF'] || 'main',
       }
     end
   end
@@ -120,7 +120,7 @@ Vagrant.configure(2) do |config|
       ansible.playbook = "macos-playbook.yaml"
       ansible.extra_vars = {
         llvm_version: ENV['LLVM_VERSION'] || '8.0.0',
-        gitref: ENV['GITREF'] || 'master',
+        gitref: ENV['GITREF'] || 'main',
         SDKROOT: '/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk',
       }
     end
